--- a/abstract.tex
+++ b/abstract.tex
@@ -8,6 +8,9 @@ Consequently, there is increased interest in \emph{recoverable}
 concurrent objects: objects that are made robust to crash-failures
 by allowing their operations to recover from such failures.
 This paper presents a principled approach to deriving recoverable versions
-of several widely-used concurrent data structures, 
-in particular, a linked list and an elimination stack.
+of several widely-used concurrent data structures.
+\y{Specifically, the approach can be applied in a wide range of
+well-known concurrent data structure implementations to make them
+recoverable, including stacks, queues, linked lists, trees and elimination stacks. }
+%in particular, a linked list, a concurrent BST, and an elimination stack.
 \end{abstract} 
