--- a/references.bib
+++ b/references.bib
@@ -599,7 +599,6 @@
 	July 21 - 23, 2015},
 	pages     = {241--250},
 	year      = {2015},
-	crossref  = {DBLP:conf/podc/2015},
 	url       = {http://doi.acm.org/10.1145/2767386.2767415},
 	doi       = {10.1145/2767386.2767415},
 	timestamp = {Sat, 18 Jul 2015 13:42:22 +0200},
@@ -609,17 +608,13 @@
 
 
 @inproceedings{DBLP:conf/wdag/FriedmanHMP17,
-	author    = {Michal Friedman and
-	Maurice Herlihy and
-	Virendra J. Marathe and
-	Erez Petrank},
+	author    = {Michal Friedman and Maurice Herlihy and Virendra J. Marathe and Erez Petrank},
 	title     = {Brief Announcement: {A} Persistent Lock-Free Queue for Non-Volatile
 	Memory},
 	booktitle = {31st International Symposium on Distributed Computing, {DISC} 2017,
 	October 16-20, 2017, Vienna, Austria},
 	pages     = {50:1--50:4},
 	year      = {2017},
-	crossref  = {DBLP:conf/wdag/2017},
 	url       = {https://doi.org/10.4230/LIPIcs.DISC.2017.50},
 	doi       = {10.4230/LIPIcs.DISC.2017.50},
 	timestamp = {Sat, 11 Nov 2017 15:51:51 +0100},
@@ -719,15 +714,6 @@
  pages = {399--411},
 }
 
-@inproceedings{CoburnCAGGJW-Asplos2011,
- author = {Coburn, Joel and Caulfield, Adrian M. and Akel, Ameen and Grupp, Laura M. and Gupta, Rajesh K. and Jhala, Ranjit and Swanson, Steven},
- title = {{NV-Heaps}: Making Persistent Objects Fast and Safe with Next-generation, Non-volatile Memories},
- booktitle = {Proceedings of the Sixteenth International Conference on Architectural Support for Programming Languages and Operating Systems},
- series = {ASPLOS},
- year = {2011},
- pages = {105--118},
-}
-
 @inproceedings{VolosTS-Asplos2011,
  author = {Volos, Haris and Tack, Andres Jaan and Swift, Michael M.},
  title = {Mnemosyne: Lightweight Persistent Memory},
@@ -751,8 +737,7 @@
 		Maurice Herlihy and
 		Virendra J. Marathe and
 		Erez Petrank},
-	title     = {Brief Announcement: {A} Persistent Lock-Free Queue for Non-Volatile
-		Memory},
+	title     = {Brief Announcement: {A} Persistent Lock-Free Queue for Non-Volatile Memory},
 	booktitle = {31st International Symposium on Distributed Computing, {DISC} 2017,
 		October 16-20, 2017, Vienna, Austria},
 	pages     = {50:1--50:4},
@@ -835,4 +820,85 @@
   series =       {PODC},
   year =         2018,
   keywords =     {to appear},
+}
+
+@inproceedings{DBLP:conf/wdag/Harris01,
+  author    = {Timothy L. Harris},
+  title     = {A Pragmatic Implementation of Non-blocking Linked-Lists},
+  booktitle = {Distributed Computing, 15th International Conference, {DISC} 2001,
+               Lisbon, Portugal, October 3-5, 2001, Proceedings},
+  pages     = {300--314},
+  year      = {2001},
+  url       = {https://doi.org/10.1007/3-540-45414-4_21},
+  doi       = {10.1007/3-540-45414-4_21},
+  timestamp = {Fri, 26 May 2017 14:09:14 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/wdag/Harris01},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@book{DBLP:books/daglib/0020056,
+  author    = {Maurice Herlihy and
+               Nir Shavit},
+  title     = {The art of multiprocessor programming},
+  publisher = {Morgan Kaufmann},
+  year      = {2008},
+  isbn      = {978-0-12-370591-4},
+  timestamp = {Thu, 10 Feb 2011 14:09:19 +0100},
+  biburl    = {https://dblp.org/rec/bib/books/daglib/0020056},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{ABH-PODC2018,
+	author = {Attiya, Hagit and Ben-Baruch, Ohad and Hendler Danny},
+	title = {Nesting-Safe Recoverable Linearizability: Modular Constructions for Non-Volatile Memory},
+	booktitle = {Proceedings of the 37th Annual ACM SIGACT-SIGOPS Symposium on Principles of Distributed Computing},
+	series = {PODC},
+	year = {2018}
+}
+
+@article{DBLP:journals/corr/abs-1806-04780,
+  author    = {Naama Ben{-}David and Guy E. Blelloch and Yuanhao Wei},
+  title     = {Making Concurrent Algorithms Detectable},
+  journal   = {CoRR},
+  volume    = {abs/1806.04780},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1806.04780},
+  archivePrefix = {arXiv},
+  eprint    = {1806.04780},
+  timestamp = {Mon, 02 Jul 2018 18:15:11 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1806-04780},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jpdc/HendlerSY10,
+  author    = {Danny Hendler and Nir Shavit and Lena Yerushalmi},
+  title     = {A scalable lock-free stack algorithm},
+  journal   = {J. Parallel Distrib. Comput.},
+  volume    = {70},
+  number    = {1},
+  pages     = {1--12},
+  year      = {2010},
+  url       = {https://doi.org/10.1016/j.jpdc.2009.08.011},
+  doi       = {10.1016/j.jpdc.2009.08.011},
+  timestamp = {Fri, 26 May 2017 22:51:59 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/jpdc/HendlerSY10},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/podc/EllenFRB10,
+  author    = {Faith Ellen and Panagiota Fatourou and Eric Ruppert and Franck van Breugel},
+  title     = {Non-blocking binary search trees},
+  booktitle = {Proceedings of the 29th Annual {ACM} Symposium on Principles of Distributed
+               Computing, {PODC}},
+  pages     = {131--140},
+  year      = {2010},
+}
+
+@inproceedings{TimnatP-PPoPP2014,
+ author = {Timnat, Shahar and Petrank, Erez},
+ title = {A Practical Wait-free Simulation for Lock-free Data Structures},
+ booktitle = {Proceedings of the 19th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPoPP)},
+ year = {2014},
+ pages = {357--368},
 }
