--- a/BST.tex
+++ b/BST.tex
@@ -1,127 +1,13 @@
 
 
-
-\def\codeTabSpace{\hspace*{6mm}}
-\newenvironment{code}%
-{\begin{tabbing}%
-		\codeTabSpace \= \hspace*{70mm} \= \hspace*{42mm} \= \kill%
-	}%
-	{\end{tabbing}%
-}
-\newcounter{ind}
-\newcommand{\n}{\addtocounter{ind}{7}\hspace*{7mm}}
-\newcommand{\p}{\addtocounter{ind}{-7}\hspace*{-7mm}}
-\newcommand{\nlc}{\\\stepcounter{linenum}{\scriptsize \arabic{linenum}}\>\hspace*{\value{ind}mm}}
-\newcommand{\ul}{\\\>\hspace*{\value{ind}mm}}
-\newcommand{\bl}{\\[-1.5mm]\>\hspace*{\value{ind}mm}}
-\newcommand{\firstline}{\stepcounter{linenum}{\scriptsize \arabic{linenum}}\>}
-\newcommand{\lref}[1]{\linenumref{#1}} % use this to refer to a line number
-% End of stuff for entering source code=====================================
-
-\newcommand{\postnotnull}{(1)}
-\newcommand{\postl}{(2)}
-\newcommand{\postpup}{(3)}
-\newcommand{\postnonempty}{(4)}
-\newcommand{\postgpnotnull}{(4a)}
-\newcommand{\postp}{(4b)}
-\newcommand{\postgpup}{(4c)}
-
-\newcommand{\tabtabcom}{\>\>\com}
-\newcommand{\tabcom}{\>\com}
-
-
-\newcommand{\Key}{Key}
-\newcommand{\R}{{\bf R}}
-%\newcommand{\NULL}{\mbox{$\bot$}}
-\newcommand{\clean}{\mbox{\sc Clean}}
-\newcommand{\mk}{\mbox{\sc Mark}}
-\newcommand{\insertflag}{\mbox{I\Flag}}
-\newcommand{\deleteflag}{\mbox{D\Flag}}
-\newcommand{\record}{\mbox{record}}
-\newcommand{\info}{\mbox{info}}
-\newcommand{\FAIL}{\mbox{\sc Fail}}
-
-\newcommand{\Flag}{Flag}
-\newcommand{\DFlag}{DInfo}
-\newcommand{\IFlag}{IInfo}
-
-\newcommand{\ie}{{\it i.e.}}
-\newcommand{\TRUE}{\mbox{\sc True}}
-\newcommand{\FALSE}{\mbox{\sc False}}
-
-\newcommand{\func}[1]{\mbox{\sc #1}}
-
-\newcommand{\CASB}{\func{CAS}}
-
-\newcommand{\comnospace}{\mbox{$\triangleright$}}
-\newcommand{\com}{\mbox{\comnospace\ }}
-
-\newcommand{\doublespace}{\addtolength{\baselineskip}{.8\baselineskip}}
-\newcommand{\ds}{\addtolength{\baselineskip}{.9\baselineskip}}
-
-%%%%%%%%%%%%%%%%%%%%% COMMENTS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%%%% New state-of-the-art method for comment insertion
-%%%% by multiple distributed authors.
-%%%% These comments are present in the LATEX file and
-%%%% do not appear in print.
-%
-%% define debug: use first def for debug, second def for final version
-\newcommand{\debug}[1]{#1}
-%\newcommand{\debug}[1]{}
-%
-
-%% \newcommand{\comment}[1]{\debug{\marginpar {\sloppy\tiny #1}}}
-\newcommand{\lcomment}[1]{\debug{\comment{$\rightarrow$ #1}}}
-\newcommand{\incomment}[1]{\debug{[[[#1]]]}}
-%
-\newcommand{\fM}[1]{\comment{#1 5-14 M.}}
-\newcommand{\fD}[1]{\comment{#1 5-21 D.}}
-\newcommand{\upcom}[1]{#1}
-%
-%%%%%%%%%%%%%%%% end of comments %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-\newenvironment{remark}{\begin{trivlist}
-		\item[\hspace{\labelsep}{\bf\noindent Remark. }]}{\end{trivlist}}
-%
-%
-
-\newenvironment{centre}{\begin{center}}{\end{center}}
-% sets up centre as alternate name for center.
-
-
-
-% marginal comment
-\newcommand{\comment}[1]{\marginpar{\tiny #1}}
-%\mnote{Example: only one algorithm is typed in so far.}
-\newcommand{\mnote}[1]
-{\marginpar%
-	[{\tiny\begin{minipage}[t]{\marginparwidth}\raggedright#1%
-	\end{minipage}}]%
-	{\tiny\begin{minipage}[t]{\marginparwidth}\raggedright#1%
-	\end{minipage}}%
-}
-
-
-
-%\newcommand{\here}[1]{[[[#1]]]\marginpar{***}}
-\newcommand{\ignore}[1]{}
-\newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
-
-\newcommand{\lft}{\mbox{\it left}}
-
-
-
-
 \section{Robust BST}
+\label{section:BST}
 
 The original BST algorithm does not support the crash-recovery model. It is clear from the code a process does not persist the operation's response in the non-volatile memory, and thus, once a process crash the response is lost. For example, assume a process $q$ apply $\func{Insert} (k)$, performs a successful \CASB\ in line \lref{iflag-cas} and fails after completing the \func{HelpInsert} routine. In this case, the \func{Insert} operation took effect, that is, the new key appears as a leaf in the tree, and any $\func{Find} (k)$ operation will return it. However, even though the operation must be linearized before the crash, upon recovery process $q$ is unaware of it. Moreover, looking for the new leaf in the tree may be futile, as it might be $k$ has been removed from the tree after the crash.
 
 Furthermore, if no recover routine is supplied, it may result an execution which is not well-formed. Consider for example the following scenario. A process $q$ invoke an $Op_1 = \func{Insert}(k_1)$ operation. $q$ performs a successful \CASB\ in line \lref{iflag-cas} followed by a crush. After recovering, $q$ invoke an $Op_2 = \func{Insert}(k_2)$ operation. Assume $k_1$ and $k_2$ belongs to a different parts of the tree (do not share parent or grandparent). Then, $q$ can complete the insertion of $k_2$ without having any affect on $k_1$. Now, a process $q'$ performs $\func{Find}(k_1)$ which returns \NULL, as the insertion of $k_1$ is not completed, followed by $\func{Find}(k_2)$, which returns the leaf of $k_2$. The $\func{Insert}(k_1)$ operation will be completed later by any \func{Insert} or \func{Delete} operation which needs to make changes to the flagged node. We get that $Op_2$ must be before $Op_1$ in the linearization, although $Op_1$ invoked first.
 
-The kind of anomaly described above can be addressed by having the first \CASB\ of a successful attempt for \func{Insert} or \func{Delete} as the linearization point, as in the Linked-List. For that, the \func{Find} routine should take into consideration future unavoidable changes, for example, a node flagged with \insertflag\ ensures an insertion of some key. A simple solution is to change the \func{Find} routine such that it also helps other operations, as described in figure \ref{robust find - solution 1}. The \func{Find} routine will search for key $k$ in the tree. If the \func{Search} routine returns a grandparent or a parent that is flagged, then it might be that an insert or delete of $k$ is currently in progress, thus we first help the operation to complete, and then search for $k$ again. Otherwise, if $gpupdate$ or $pupdate$ has been changed since the last read, it means some change already took affect, and there is a need to search for $k$ again. If none of the above holds, there is a point in time where $gp$ points to $p$ which points to $l$, and there is no attempt to change this part of the tree. As a result, if $k$ is in the tree at this point, it must be in $l$, and the find can return safely. 
+The kind of anomaly described above can be addressed by having the first \CASB\ of a successful attempt for \func{Insert} or \func{Delete} as the linearization point, as in the Linked-List. For that, the \func{Find} routine should take into consideration future unavoidable changes, for example, a node flagged with \insertflag\ ensures an insertion of some key. A simple solution is to change the \func{Find} routine such that it also helps other operations, as described in figure \ref{robust find - solution 1}. The \func{Find} routine will search for key $k$ in the tree. If the \func{Search} routine returns a grandparent or a parent that is flagged, then it might be that an insert or delete of $k$ is currently in progress, thus we first help the operation to complete, and then search for $k$ again. Otherwise, if $gpupdate$ or $pupdate$ has been changed since the last read, it means some change already took affect, and there is a need to search for $k$ again. If none of the above holds, there is a point in time where $gp$ points to $p$ which points to $l$, and there is no attempt to change this part of the tree. As a result, if $k$ is in the tree at this point, it must be in $l$, and the find can return safely.
 
 The approach described above is not efficient in terms of time. We would like a solution which maintain the desirable behaviour of the original \func{Find} routine, where a single \func{Search} is needed. A more refined solution is given in figure \ref{robust find - solution 2}. The intuition for it is drown from the Linked-List algorithm.
 In the Linked-List algorithm it was enough to consider a marked node as if it has been deleted, without the need to complete the deletion. Nonetheless, the complex BST implementation is more challenging, as the \func{Delete} routine needs to successfully capture two nodes using \CASB\ in order to complete the deletion. Therefore, if a process $p$ executes $\func{Find}(k)$ procedure, and observes a node flagged with $\deleteflag$ attempting to delete the key $k$, it can not know whether in the future this delete attempt will succeed or fail, and thus does not know whether to consider the key $k$ as part of the tree or not. To overcome this problem, in such case the process will first try and validate the delete operation by marking the relevant node. According to whether the marking attempt was successful, the process can conclude if the delete operation is successful or not.
@@ -140,14 +26,14 @@ Notice that there is a scenario in which process $q$ recovers and observes an op
 
 The given implementation does not recover the \func{Find} routine, since this routine does not make any changes to the BST, hence it is always safe to consider it as having no linearization point and reissue it. Also, for ease of presentation, we only write to $Announce[id]$ once we are about to capture a node using a CAS. However, writing to $Announce[id]$ at the beginning of the routine may be helpful in case of a crash early in the routine, so that the process will be able to use the data stored in $Announce[id]$ in such case also. The same is true with response value, $Announce[id]\rightarrow done$ is updated only if the routine made changes to the BST.
 
-\subsubsection{Correctness}
+\subsection*{Correctness Arguments}
 
 In the following section we give a proof sketch for the algorithm correctness. We assume for simplicity nodes and \Flag\ records are always allocated new memory locations, although it is enough to require no location is reallocated as long as there is a chain of pointers leading to it. The proof relies on the correctness of the original algorithm, which can be found on [....].
 
 The proof relies on several key arguments given below.
 
 \newcommand{\argAnonymous}{arg1}
-[\textbf{Arg1}] The original algorithm is anonymous and uniform, i.e., any number of processes can use the BST, and there is no need to know the number of processes in the system in order to use the BST. Notice that all helping routines in the given implementation are completely anonymous, and an execution of such a routine by either the process which invoked $op$ or any other helping process executes the exact same code. This observation allows the use of the following argument. If a process crash while executing some helping routine, we can consider it as an helping process which stop taking steps (more formally, there is an equivalent execution in which there is such a process, and it is indistinguishable to all process in the system). Since such process can not cause a wrong behaviour of the algorithm, so does the crash. 
+[\textbf{Arg1}] The original algorithm is anonymous and uniform, i.e., any number of processes can use the BST, and there is no need to know the number of processes in the system in order to use the BST. Notice that all helping routines in the given implementation are completely anonymous, and an execution of such a routine by either the process which invoked $op$ or any other helping process executes the exact same code. This observation allows the use of the following argument. If a process crash while executing some helping routine, we can consider it as an helping process which stop taking steps (more formally, there is an equivalent execution in which there is such a process, and it is indistinguishable to all process in the system). Since such process can not cause a wrong behaviour of the algorithm, so does the crash.
 A corollary of this argument is that repeating an helping routine multiple times by the same process can not violate the BST specification, as there is an equivalent executions in which multiple processes executes the different helping routines.
 
 \newcommand{\argSearch}{arg2}
@@ -170,7 +56,7 @@ $Op = \func{Delete}$. Consider the read of $op\rightarrow gp\rightarrow update$ 
 The first process to try and mark $op\rightarrow p\rightarrow update$ during an \func{HelpDelete}$(op)$ routine is the one to determine the outcome of it. If it is successful, then $p$ is marked, and the $update$ field can not be changed. That is, any \func{HelpDelete}$(op)$ execution will obtain true in line \lref{checkmark}, and will call \func{HelpMarked}$(op)$ routine. Otherwise, the \CASB\ fails, and so $p\rightarrow update$ is no longer equal to $op\rightarrow pupdate$. By \argNodeUpdate\ it will never get this value again, and thus any marking \CASB\ during a \func{HelpDelete}$(op)$ execution will fail, and there is no call to \func{HelpMarked}$(op)$. In the first case, any \func{HelpDelete}$(op)$ routine must first complete a \func{HelpMarked}$(op)$, and thus must write to $op\rightarrow done$, while in the later case, there is no write to $op\rightarrow done$, as no \func{HelpMarked}$(op)$ is ever invoked. Therefore, in both cases, when $q$ completes \func{HelpMarked}$(op)$ it reads $op\rightarrow done$ and returns the right response.
 
 
-Otherwise $gpupdate \neq \langle \deleteflag, op \rangle$, and there are two scenarios to consider. If the dflag \CASB\ of $q$ in line \lref{dflag-cas} never took affect, because it either failed, or the crash preceded it, then $op$ is never written to $gp\rightarrow update$, or to any update field. Thus, no process is aware of it, and $op\rightarrow done$ remains \FALSE, resulting $q$ returning \FAIL\ as required. Else, the \CASB\ was successful, and $gp\rightarrow update$ was flagged. The only way to change it is to first unflag it, and this in turn can be done only during an \func{HelpDelete}$(op)$ routine. In this case, it can be unflagged in either the \func{HelpMarked} routine in line \lref{dunflag-cas}, or in line \lref{backtrack-cas} of the \func{HelpDelete} routine. As mention before, the first \CASB\ in line \lref{mark-cas} of an \func{HelpDelete}$(op)$ execution determines the outcome for all \func{HelpDelete}$(op)$. If it is successful, $p\rightarrow update$ is forever marked, and all \func{HelpDelete}$(op)$ must invoke \func{HelpMarked}$(op)$. Therefore, the only option to unflag $gp\rightarrow update$ is at the end of \func{HelpMarked}$(op)$ routine, and this done only after setting $op\rightarrow done$. In such case, the \func{Delete} operation took affect, and $q$ will return \TRUE. On the other hand, if the \CASB\ was not successful, then any \func{HelpDelete}$(op)$ will fail to mark $p\rightarrow update$, and hence no \func{HelpMarked}$(op)$ is ever invoked. As a result, there is no write to $op\rightarrow done$. In such case, the \func{Delete} operation did not took affect, nor will be, and indeed $q$ will return \FAIL. 
+Otherwise $gpupdate \neq \langle \deleteflag, op \rangle$, and there are two scenarios to consider. If the dflag \CASB\ of $q$ in line \lref{dflag-cas} never took affect, because it either failed, or the crash preceded it, then $op$ is never written to $gp\rightarrow update$, or to any update field. Thus, no process is aware of it, and $op\rightarrow done$ remains \FALSE, resulting $q$ returning \FAIL\ as required. Else, the \CASB\ was successful, and $gp\rightarrow update$ was flagged. The only way to change it is to first unflag it, and this in turn can be done only during an \func{HelpDelete}$(op)$ routine. In this case, it can be unflagged in either the \func{HelpMarked} routine in line \lref{dunflag-cas}, or in line \lref{backtrack-cas} of the \func{HelpDelete} routine. As mention before, the first \CASB\ in line \lref{mark-cas} of an \func{HelpDelete}$(op)$ execution determines the outcome for all \func{HelpDelete}$(op)$. If it is successful, $p\rightarrow update$ is forever marked, and all \func{HelpDelete}$(op)$ must invoke \func{HelpMarked}$(op)$. Therefore, the only option to unflag $gp\rightarrow update$ is at the end of \func{HelpMarked}$(op)$ routine, and this done only after setting $op\rightarrow done$. In such case, the \func{Delete} operation took affect, and $q$ will return \TRUE. On the other hand, if the \CASB\ was not successful, then any \func{HelpDelete}$(op)$ will fail to mark $p\rightarrow update$, and hence no \func{HelpMarked}$(op)$ is ever invoked. As a result, there is no write to $op\rightarrow done$. In such case, the \func{Delete} operation did not took affect, nor will be, and indeed $q$ will return \FAIL.
 
 
 
@@ -178,333 +64,14 @@ Otherwise $gpupdate \neq \langle \deleteflag, op \rangle$, and there are two sce
 
 \remove{
 %%%%%%%REMOVE%%%%%%%%%%%%%%
-Assume process $q$ performs an \func{Insert}$(k)$ operation. As argued in \argSearch, a crash before writing to $Announce[q]$ implies no changes has been made to the BST. Assume thus $q$ executes line \lref{insert-write-announce}, i.e., $q$ stored in $Announce[q]$ a pointer to an \IFlag\ record $op$ containing all the data of the current attempt to complete the \func{Insert} routine. Since $q$ is in the middle of a while loop, it is enough to prove that if $q$ crash before the next time it writes to $Announce[q]$, if there is such write, upon recovery it will either complete its operation with the right response, or will continue to the next write to $Announce[q]$ without having any affect on the BST. Hence, the same argument can be applied once $q$ writes to $Announce[q]$ again. Notice that if $q$ does not crash, the algorithm is identical to the original algorithm, except for the additional write to $op\rightarrow done$, and thus the original proof can 
+Assume process $q$ performs an \func{Insert}$(k)$ operation. As argued in \argSearch, a crash before writing to $Announce[q]$ implies no changes has been made to the BST. Assume thus $q$ executes line \lref{insert-write-announce}, i.e., $q$ stored in $Announce[q]$ a pointer to an \IFlag\ record $op$ containing all the data of the current attempt to complete the \func{Insert} routine. Since $q$ is in the middle of a while loop, it is enough to prove that if $q$ crash before the next time it writes to $Announce[q]$, if there is such write, upon recovery it will either complete its operation with the right response, or will continue to the next write to $Announce[q]$ without having any affect on the BST. Hence, the same argument can be applied once $q$ writes to $Announce[q]$ again. Notice that if $q$ does not crash, the algorithm is identical to the original algorithm, except for the additional write to $op\rightarrow done$, and thus the original proof can
 
 
 Assume $q$ performs a successful CAS in line \lref{iflag-cas}. Then, a reference to the \IFlag\ $op$ is stored in $p\rightarrow update$, which is also flagged. Following \argNodeUpdate, $p$ was not changed since the \func{Search} routine read it, and it still points to $l$.
-Starting from this point, no changes can be made to $p$, except for the change point to by $op$, as the node is flagged. Now, only the first process 
+Starting from this point, no changes can be made to $p$, except for the change point to by $op$, as the node is flagged. Now, only the first process
 
 Relying on the correctness of the original algorithm, no matter how many times \func{HelpInsert}(op) will be executed, the change will occur only once. This follows from the fact that many process can observe op, and will try to complete it in the future. The core for this argument is that a node never point twice to the same node.
 }
 
 
 
-
-
-
-
-%\setcounter{linenum}{0}
-
-
-\begin{figure*}[h]
-	\footnotesize
-	
-	\begin{code}
-		\func{Find}($\Key\ k$) : Leaf* \{ \nlc
-		\n Internal *$gp$, *$p$\nlc
-		Leaf *$l$\nlc
-		Update $pupdate, gpupdate$\bl
-		\nlc
-		
-		%     Update $pupdate,gpupdate$\ul \nlc
-		while (\TRUE) \{ \nlc \n
-		$\langle gp, p, l, pupdate, gpupdate \rangle := \func{Search}(k)$\nlc
-		if $gpupdate.state \neq \clean$ then $\func{Help}(gpupdate)$ \nlc
-		else if $pupdate.state \neq \clean$ then $\func{Help}(pupdate)$ \nlc
-		else if $gp \rightarrow update = gpupdate$ and $p \rightarrow update = pupdate$ then \{ \nlc \n
-		if $l \rightarrow key = k$ then return $l$ \nlc
-		else return \NULL \nlc
-		\p \} \nlc
-		\p \} \nlc
-		\p \}
-	\end{code}
-	
-	\caption{Solution 1: R-linearizable \func{Find} routine}
-	\label{robust find - solution 1}
-\end{figure*}
-
-
-
-\begin{figure*}[h]
-	\footnotesize
-	
-	\begin{code}
-		\func{Find}($\Key\ k$) : Leaf* \{ \nlc
-			\n Internal *$gp$, *$p$\nlc
-			Leaf *$l$\nlc
-			Update $pupdate, gpupdate$\bl
-			\nlc
-			
-			%     Update $pupdate,gpupdate$\ul \nlc
-			$\langle gp, p, l, pupdate, gpupdate \rangle := \func{Search}(k)$\nlc
-			if $l\rightarrow key \neq k$ then \{ \nlc
-				\n if ($pupdate.state = \insertflag$ and $pupdate.info$ attempt to add key $k$) then \nlc
-					\n return leaf with key $k$ from $pupdate.info$ \nlc \p
-				else return \NULL \nlc \p
-			\} \nlc
-			if ($pupdate.state = \mk$ and $pupdate.info \rightarrow l \rightarrow key = k$) then return \NULL \nlc
-			if ($gpupdate.state = \deleteflag$ and $gpupdate.info \rightarrow l \rightarrow key = k$) then \{ \nlc
-				\n $op := gpupdate.info$ \nlc
-				$result := \CASB(op\rightarrow p\rightarrow update, op\rightarrow pupdate, \langle \mk, op\rangle)$ \tabtabcom {\bf mark \CASB}\label{mark-cas}\nlc     
-				if ($result = op\rightarrow pupdate$ or $result = \langle \mk, op\rangle$) then return \NULL \label{checkmark} \tabtabcom $op\rightarrow p$ is successfully marked \nlc \p
-			\} \nlc
-			return $l$ \nlc \p
-		\}
-	\end{code}
-
-	\caption{Solution 2: R-linearizable \func{Find} routine}
-	\label{robust find - solution 2}
-\end{figure*}
-
-
-
-
-\begin{figure}[bt]
-	\footnotesize
-	\begin{code}
-		\firstline
-		type Update \{ \hspace*{14mm} \com stored in one CAS word\nlc
-		\n  $\{\clean,\deleteflag,\insertflag,\mk\}$ $state$ \nlc
-		\Flag\ *{\it info}\nlc
-		\p
-		\}
-		\nlc
-		type Internal \{ \hspace*{13.25mm} \com subtype of Node\nlc
-		\n $\Key \cup \{\infty_1,\infty_2\}$ $key$\nlc
-		Update $update$\nlc
-		Node *\lft, *$right$\nlc
-		\p\}
-		\nlc
-		type Leaf \{ \hspace*{18.3mm} \com subtype of Node\nlc
-		%\hspace*{4mm} \com could also store auxiliary information\nlc 
-		\n $\Key \cup \{\infty_1,\infty_2\}$  $key$\nlc
-		\p\}
-		\nlc
-		type \IFlag\ \{ \hspace*{17.7mm} \com subtype of \Flag\nlc
-		\n Internal *$p$, *$newInternal$\nlc
-		Leaf *$l$\nlc
-		\textcolor{blue}{boolean $done$} \nlc
-		\p\}
-		\nlc
-		type \DFlag\ \{ \hspace*{16.4mm} \com subtype of \Flag\nlc
-		\n Internal *$gp$, *$p$\nlc
-		Leaf *$l$\nlc
-		Update $pupdate$\nlc
-		\textcolor{blue}{boolean $done$} \nlc
-		\p\}   
-		\ul
-		\com Initialization:\nlc
-		shared Internal *$Root$ := pointer to new Internal node \ul
-		\n with $key$ field $\infty_2$, $update$ field $\langle \clean,\NULL\rangle$, and\ul
-		pointers to new Leaf nodes with keys $\infty_1$ and\ul 
-		$\infty_2$, respectively, as \lft\ and $right$ fields.
-		\p 
-	\end{code}
-	\caption{\label{code1}Type definitions and initialization.}
-\end{figure}
-
-
-
-\begin{figure*}
-	\footnotesize
-	
-	\begin{code}
-		\func{Recover}() \{ \nlc \n
-			Flag $*op = Announce[id]$ \bl \nlc
-			
-			if $op$ of type \IFlag\ then \{ \nlc \n
-				$result := op\rightarrow p\rightarrow update$ \nlc
-				if $result = \langle \insertflag,op \rangle$ then \func{HelpInsert}$(op)$ \tabtabcom Finish the insertion \nlc
-				%if $op\rightarrow p$ points to $op\rightarrow newInternal$ or \nlc
-				%\n $op\rightarrow newInternal \rightarrow update \neq \langle \clean, \NULL\rangle$ then return \TRUE \nlc
-				%\p else return \FAIL \nlc
-			\p \} \nlc
-			if $op$ of type \DFlag\ then \{ \nlc \n
-				$result := op\rightarrow gp\rightarrow update$ \nlc
-				if $result = \langle \deleteflag, op \rangle$ then \func{HelpDelete}$(op)$ \tabtabcom Either finish deletion or unflag \nlc
-				%if $op\rightarrow p\rightarrow update = \langle \mk, op \rangle$ then return \TRUE \nlc
-				%else return \FAIL \nlc
-			\p \} \nlc
-			if $op\rightarrow done = \TRUE$ then return \TRUE\ \nlc
-			else return \FAIL \nlc
-		\p \}
-			
-			
-	\end{code}
-
-\caption{\func{Recover} routine}
-\end{figure*}
-
-
-
-\begin{figure*}
-	\scriptsize
-	\begin{code}
-		\firstline
-		\func{Search}($\Key\ k$) : $\langle \mbox{Internal*}, \mbox{Internal*}, \mbox{Leaf*}, \mbox{Update}, \mbox{Update}\rangle$  \{\ul
-		\n \com Used by \func{Insert}, \func{Delete} and \func{Find} to traverse a branch of the BST; satisfies following {\it postconditions}:\ul
-		\com \postnotnull\ $l$ points to a Leaf node and $p$ points to an Internal node\ul
-		\com \postl\ Either $p\rightarrow \lft$ has contained $l$ (if $k<p\rightarrow key$) or $p\rightarrow right$ has contained $l$ (if $k\geq p\rightarrow key$)\ul
-		\com \postpup\ $p\rightarrow update$ has contained $pupdate$\ul
-		\com \postnonempty\ if $l\rightarrow key\neq \infty_1$, then the following three statements hold:\ul
-		\com \hspace*{3mm}\postgpnotnull\ $gp$ points to an Internal node\ul
-		\com \hspace*{3mm}\postp\ either $gp\rightarrow \lft$ has contained $p$ (if $k<gp\rightarrow key$) or $gp\rightarrow right$ has contained $p$ (if $k\geq gp\rightarrow key$)\ul
-		\com \hspace*{3mm}\postgpup\ $gp\rightarrow update$ has contained $gpupdate$\nlc
-		Internal *$gp$, *$p$\nlc
-		Node *$l:= Root$  \label{restart-search}\nlc
-		
-		Update $gpupdate, pupdate$ \tabtabcom Each stores a copy of an $update$ field\bl\nlc
-		%\com The initial values of $p,gp,pupdate$ and $gpupdate$ are unimportant
-		%$p :=\NULL$ 
-		%$pupdate := \langle \clean, \NULL\rangle$\nlc
-		while $l$ points to an internal node \{ \nlc%\com Advance down the tree\nlc
-		\n         $gp := p$ \tabtabcom Remember parent of $p$\nlc
-		$p := l$ \tabtabcom Remember parent of $l$\nlc
-		$gpupdate := pupdate$ \tabtabcom Remember $update$ field of $gp$\nlc
-		$pupdate := p\rightarrow update$\label{store-pupdate}\tabtabcom Remember $update$ field of $p$\nlc  
-		%           if $pupdate.state = \mk$ then \label{checkmark} \{\nlc
-		%\n              \func{HelpMarked}$(pupdate.info)$ \label{call-hm3}\nlc
-		%                goto line \lref{restart-search} \com Restart traversal\nlc
-		%\p         \}\nlc        
-		if $k < l\rightarrow key$ then $l:= p\rightarrow \lft$ else $l:=p \rightarrow right$ \label{read-child}\tabtabcom Move down to appropriate child\nlc
-		%           if $pupdate \neq p\rightarrow update$ then goto line \lref{restart-search} \com Restart traversal \label{reread-pupdate}\nlc
-		\p \} \nlc
-		return $\langle gp, p, l, pupdate, gpupdate \rangle$ \nlc
-		\p 
-		\}\bl
-		\nlc
-		\func{Find}($\Key\ k$) : Leaf* \{ \nlc
-		\n   Leaf *$l$\bl
-		\nlc
-		%     Update $pupdate,gpupdate$\ul \nlc
-		$\langle -,-,l,-,-\rangle := \func{Search}(k)$\nlc
-		if $l\rightarrow key = k$ then return $l$\nlc
-		else return \NULL\nlc
-		\p
-		\}\bl
-		\nlc
-		\func{Insert}($\Key\ k$) : boolean \{ \nlc
-		\n Internal *$p$, *$newInternal$\nlc 
-		Leaf *$l$, *$newSibling$\nlc 
-		Leaf *$new :=$ pointer to a new Leaf node whose $key$ field is $k$  \nlc
-		Update $pupdate, result$\nlc
-		\IFlag\ *$op$\bl\nlc%:=$ pointer to a new \IFlag\ \record\ \ul\nlc
-		while \TRUE\ \{  \nlc
-		\n $\langle -, p, l, pupdate, - \rangle := \func{Search}(k)$ \label{ins-search}\nlc
-		if $l \rightarrow key = k$ then return \FALSE\ \tabtabcom Cannot insert duplicate key\label{insert-false}\nlc
-		if $pupdate.state \neq \clean$ then \func{Help}$(pupdate)$ \tabtabcom Help the other operation \label{ins-help-unclean}\nlc
-		else \{\nlc
-		\n        $newSibling :=$ pointer to a new Leaf whose key is $l\rightarrow key$\nlc
-		$newInternal :=$ pointer to a new Internal node with $key$ field $\max(k, l \rightarrow key)$,\label{create-internal}\ul      
-		\n      $update$ field $\langle \clean, \NULL\rangle$, and with two
-		child fields equal to $new$ and $newSibling$\ul 
-		(the one with the smaller key is the left child)\nlc
-		\p        $op :=$ pointer to a new \IFlag\ \record\  containing $\langle p, l, newInternal, \textcolor{blue}{\FALSE}\rangle$\label{new-IFlag}\nlc
-		\textcolor{blue}{$Announce[id] := op$} \label{insert-write-announce} \nlc
-		$result := \CASB(p\rightarrow update, pupdate, \langle \insertflag, op\rangle)$ \tabtabcom {\bf iflag \CASB}\label{iflag-cas} \nlc
-		if $result = pupdate$ then \{ \tabtabcom The iflag \CASB\ was successful\nlc
-		\n            \func{HelpInsert}$(op)$ \tabtabcom Finish the insertion\label{finish-insert}\nlc
-		return \TRUE\ \label{insert-true}\nlc
-		\p        \}\nlc 
-		else \func{Help}$(result)$ \tabcom The iflag \CASB\ failed; help the operation that caused failure\label{ins-help-after-failure}\nlc
-		\p    \}\nlc
-		\p\}\nlc 
-		\p
-		\}\bl
-		\nlc
-		
-		\func{HelpInsert}(\IFlag\ *$op$) \{\ul
-		\n     \com {\it Precondition}:  $op$ points to an \IFlag\ \record\  (\ie, it is not $\NULL$)\nlc
-	%	\textcolor{blue}{$op \rightarrow done := \insertflag$} \tabtabcom {announce the iflag \CASB\ was successful}\nlc 
-		\func{CAS-Child}$(op\rightarrow p, op\rightarrow l, op\rightarrow newInternal)$ \tabtabcom {\bf ichild \CASB}\label{ichild-cas}\nlc
-		\textcolor{blue}{$op \rightarrow done := \TRUE$} \tabtabcom {announce the operation completed}\nlc 
-		$\CASB(op\rightarrow p\rightarrow update, \langle \insertflag, op \rangle, \langle \clean, op\rangle)$ \tabtabcom {\bf iunflag \CASB} \label{iunflag-cas}\nlc
-		\p
-		\}
-	\end{code}
-	\caption{\label{code2}Pseudocode for \func{Search}, \func{Find} and \func{Insert}.}
-\end{figure*}
-
-\begin{figure*}
-	\scriptsize
-	\begin{code}
-		\firstline
-		\func{Delete}($\Key\ k$) : boolean \{\nlc
-		\n Internal *$gp$, *$p$\nlc
-		Leaf *$l$\nlc
-		Update $pupdate, gpupdate, result$\nlc
-		\DFlag\ *$op$\bl\nlc
-		while \TRUE\ \{ \nlc
-		\n     $\langle gp, p, l, pupdate, gpupdate \rangle := \func{Search}(k)$\label{del-search}\nlc
-		if $l\rightarrow key \neq k$ then return \FALSE\ \tabtabcom Key $k$ is not in the tree\label{delete-false}\nlc
-		%       assert: $gp$ points to an internal node\label{assert-gpnotnull}\nlc
-		if $gpupdate.state \neq \clean$ then \func{Help}$(gpupdate)$ \label{del-help-unclean-1}\nlc
-		else if $pupdate.state \neq \clean$ then \func{Help}$(pupdate)$\label{del-help-unclean-2}\nlc
-		else \{ \tabtabcom Try to flag $gp$\nlc
-		\n          $op :=$ pointer to a new \DFlag\ \record\  containing $\langle gp, p, l, pupdate, \textcolor{blue}{\FALSE} \rangle$\label{new-DFlag}\nlc
-		\textcolor{blue}{$Announce[id] := op$} \nlc
-		$result := \CASB(gp\rightarrow update, gpupdate, \langle \deleteflag, op \rangle)$ \tabtabcom {\bf dflag \CASB}\label{dflag-cas}\nlc
-		if $result = gpupdate$ then \{ \tabtabcom \CASB\ successful \nlc
-		\n             if \func{HelpDelete}$(op)$ then return \TRUE \label{delete-true} \tabtabcom Either finish deletion or unflag\nlc
-		\p          \}\nlc                 
-		else \func{Help}$(result)$ \tabcom The dflag \CASB\ failed; help the operation that caused the failure \label{del-help-after-failure}\nlc%; help operation that is in the way 
-		\p     \}\nlc
-		\p \}\nlc
-		\p
-		\}\bl
-		\nlc
-		
-		\func{HelpDelete}(\DFlag\ *$op$) : boolean \{\ul
-		\n   \com {\it Precondition}:  $op$ points to a \DFlag\ \record\  (\ie, it is not \NULL)\nlc%$op\rightarrow pupdate.state = \clean$\nlc
-		Update $result$ \tabtabcom Stores result of mark \CASB\bl\nlc
-		%\com First, try to mark the node that $op\rightarrow p$ points to\nlc
-		%$pupdate = op\rightarrow pupdate$\nlc
-		$result := \CASB(op\rightarrow p\rightarrow update, op\rightarrow pupdate, \langle \mk, op\rangle)$ \tabtabcom {\bf mark \CASB}\label{mark-cas}\nlc     
-		if $result = op\rightarrow pupdate$ or $result = \langle \mk, op\rangle$ then \label{checkmark}\{\tabtabcom $op\rightarrow p$ is successfully marked\nlc
-		\n          \func{HelpMarked}$(op)$ \label{call-hm1} \tabtabcom Complete the deletion\nlc
-		return \TRUE\tabtabcom Tell \func{Delete} routine it is done\nlc
-		\p       \}\nlc
-		else \{\tabtabcom The mark \CASB\ failed \nlc
-		\n              
-		\func{Help}$(result)$\label{help-after-failed-mark}\tabtabcom Help operation that caused failure\nlc
-		\CASB$(op\rightarrow gp\rightarrow update, \langle \deleteflag, op\rangle, \langle \clean, op\rangle)$ \tabtabcom {\bf backtrack \CASB}\label{backtrack-cas}\nlc
-		
-		return \FALSE\tabtabcom Tell \func{Delete} routine to try again\nlc
-		\p       \}\nlc
-		\p
-		\}\bl
-		\nlc
-		
-		\func{HelpMarked}(\DFlag\ *$op$) \{\ul
-		\n   \com {\it Precondition}:  $op$ points to a \DFlag\ \record\  (\ie, it is not $\NULL$)\nlc
-		Node *$other$\bl\ul
-		\com Set $other$ to point to the sibling of the node to which  $op\rightarrow l$ points \nlc
-		if $op\rightarrow p\rightarrow right = op\rightarrow l$ then $other := op\rightarrow p \rightarrow \lft$ else $other:=op\rightarrow p\rightarrow right$\label{read-other}\ul 
-		\com Splice the node to which $op\rightarrow p$ points out of the tree, replacing it by $other$\nlc
-		\func{CAS-Child}$(op\rightarrow gp, op\rightarrow p, other)$ \tabtabcom {\bf dchild \CASB}\label{dchild-cas}\nlc
-		%     \com Unflag the node $op\rightarrow gp$ points to\nlc
-		\textcolor{blue}{$op \rightarrow done := \TRUE$} \tabtabcom {announce the operation completed} \nlc
-		\CASB$(op\rightarrow gp\rightarrow update, \langle \deleteflag, op\rangle, \langle \clean, op\rangle)$ \tabtabcom {\bf dunflag \CASB}\label{dunflag-cas}\nlc
-		\p
-		\}\bl\nlc
-		
-		\func{Help}(Update $u$) \{ \tabtabcom General-purpose helping routine\ul
-		\n    \com {\it Precondition}:  $u$ has been stored in the $update$ field of some internal node\nlc
-		if $u.state = \insertflag$ then \func{HelpInsert}$(u.\info)$\label{call-HelpInsert}\nlc
-		else if $u.state = \mk$ then \func{HelpMarked}$(u.\info)$\label{call-hm2}\nlc
-		else if $u.state = \deleteflag$ then \func{HelpDelete}$(u.\info)$\label{call-HelpDelete}\nlc
-		\p
-		\}\bl
-		\nlc
-		\func{CAS-Child}(Internal *$parent$, Node *$old$, Node *$new$) \{\label{CAS-Child}\ul
-		\n  \com {\it Precondition}:  $parent$ points to an Internal node and $new$ points to a Node (\ie, neither is \NULL)\ul
-		\com This routine tries to change one of the child fields of the node that $parent$ points to from $old$ to $new$.\nlc
-		if $new \rightarrow key < parent\rightarrow key$ then\label{which-child}\nlc
-		\n       \CASB$(parent\rightarrow \lft, old, new)$\label{child-cas-1}\nlc
-		\p  else\nlc
-		\n       \CASB$(parent\rightarrow right, old, new)$\label{child-cas-2}\nlc
-		\p\p 
-		\}
-	\end{code}
-	\caption{\label{code3}Pseudocode for \func{Delete} and some auxiliary routines.}
-\end{figure*}
